net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/EmptyRouteTableTest[2021-04-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-b26fc5b8aea9c4c8d87bc002cf0f4a87-9adf574ba6b76dea-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "02915b53e14b65b96a930bbdf8647a04",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:31 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "bef2414d-80de-4a60-b42e-fda3155812cd",
        "x-ms-ratelimit-remaining-subscription-reads": "11758",
        "x-ms-request-id": "bef2414d-80de-4a60-b42e-fda3155812cd",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155131Z:bef2414d-80de-4a60-b42e-fda3155812cd"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg6070?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-7817ff3cc07c9fb67b6b5f993c9fa1cc-2fd5e27420b88827-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9ac8e199ddeecf8baa22632fbbfd4d1e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:31 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "1df27ce4-60dd-469d-a377-b26950ca2dd6",
        "x-ms-ratelimit-remaining-subscription-writes": "1142",
        "x-ms-request-id": "1df27ce4-60dd-469d-a377-b26950ca2dd6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155132Z:1df27ce4-60dd-469d-a377-b26950ca2dd6"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070",
        "name": "csmrg6070",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-6a373ec60b3d0e0557ea1b2803d6ef5d-08ee10347dea66c3-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "25bea9abee2d665f8108191d116a5a08",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9bb65cd0-137f-41ca-83df-4e76268ee809?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "478",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:34 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "49baae8a-3c0e-4c4e-ab6f-639a45ffb904",
        "x-ms-client-request-id": "25bea9abee2d665f8108191d116a5a08",
        "x-ms-correlation-request-id": "fbf9519e-2ff5-4cd7-bf0f-b22690542316",
        "x-ms-ratelimit-remaining-subscription-writes": "1141",
        "x-ms-request-id": "9bb65cd0-137f-41ca-83df-4e76268ee809",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155134Z:fbf9519e-2ff5-4cd7-bf0f-b22690542316"
      },
      "ResponseBody": {
        "name": "azsmnet463",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463",
        "etag": "W/\"ba91eb90-93e6-4c1d-8d9e-20140aadfd10\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "5e056c1a-f6e4-43b6-9acf-7cc7ce00db02",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9bb65cd0-137f-41ca-83df-4e76268ee809?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6a373ec60b3d0e0557ea1b2803d6ef5d-a50e626055470f69-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d1b90b9ff246f26c68336cd472b299b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:34 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "60ad43b4-e0b6-4b6e-a291-b6b3bd22e2d0",
        "x-ms-client-request-id": "d1b90b9ff246f26c68336cd472b299b7",
        "x-ms-correlation-request-id": "82c35e93-e12f-471c-968b-b30ae1e1a1c3",
        "x-ms-ratelimit-remaining-subscription-reads": "11757",
        "x-ms-request-id": "c8372370-8791-4898-8c1e-a052001ca08d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155134Z:82c35e93-e12f-471c-968b-b30ae1e1a1c3"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6a373ec60b3d0e0557ea1b2803d6ef5d-6f7f2171dacd9f72-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "18ee26087ae6466e2ab8f28c300a30d2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "479",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:34 GMT",
        "ETag": "W/\"ea69d769-2321-4cb4-8220-38ce2a9b8018\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a6ff860a-802e-4988-9c24-34e82b1b59b3",
        "x-ms-client-request-id": "18ee26087ae6466e2ab8f28c300a30d2",
        "x-ms-correlation-request-id": "36f9c541-df4a-421d-ba45-6b419ef9ea49",
        "x-ms-ratelimit-remaining-subscription-reads": "11756",
        "x-ms-request-id": "791f69fc-fcc2-453e-bf8f-eb3ff9e1dac8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155135Z:36f9c541-df4a-421d-ba45-6b419ef9ea49"
      },
      "ResponseBody": {
        "name": "azsmnet463",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463",
        "etag": "W/\"ea69d769-2321-4cb4-8220-38ce2a9b8018\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "5e056c1a-f6e4-43b6-9acf-7cc7ce00db02",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-247e236a926bf131eb69f88b43e730cd-d4874813b04f84d2-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "067d5a7389b1dac278743b4bf8a9937f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "479",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:35 GMT",
        "ETag": "W/\"ea69d769-2321-4cb4-8220-38ce2a9b8018\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2b54605c-89ef-40fb-98a1-ea872873a89d",
        "x-ms-client-request-id": "067d5a7389b1dac278743b4bf8a9937f",
        "x-ms-correlation-request-id": "2f1dacd7-843c-411b-909c-0348dac40730",
        "x-ms-ratelimit-remaining-subscription-reads": "11755",
        "x-ms-request-id": "df6d3f74-ba64-4b16-a6d7-6f61efdea449",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155135Z:2f1dacd7-843c-411b-909c-0348dac40730"
      },
      "ResponseBody": {
        "name": "azsmnet463",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463",
        "etag": "W/\"ea69d769-2321-4cb4-8220-38ce2a9b8018\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "5e056c1a-f6e4-43b6-9acf-7cc7ce00db02",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-ab679326da5b70e1d38e70a7e93e57b9-ee1e82949fd1c511-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0f4c06077dc025d89d73a68dffdfc25e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "556",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:35 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "50d2d126-666c-4588-ba61-f7fc79e55a5d",
        "x-ms-client-request-id": "0f4c06077dc025d89d73a68dffdfc25e",
        "x-ms-correlation-request-id": "fdfca4f5-7617-4b73-90fb-81dc405e0531",
        "x-ms-ratelimit-remaining-subscription-reads": "11754",
        "x-ms-request-id": "764b30df-d7ac-42a0-a66f-a2d1e834f612",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155136Z:fdfca4f5-7617-4b73-90fb-81dc405e0531"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet463",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463",
            "etag": "W/\"ea69d769-2321-4cb4-8220-38ce2a9b8018\"",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "5e056c1a-f6e4-43b6-9acf-7cc7ce00db02",
              "disableBgpRoutePropagation": false,
              "routes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables/azsmnet463?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c68f6eeb84e88246767302502dba399c-b1f02cf293749fa3-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1760990292347f0663139f713e234d81",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/10cec9d1-8b48-4fbf-8805-0b8da122dabb?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:51:36 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/10cec9d1-8b48-4fbf-8805-0b8da122dabb?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6b2eeba5-8ad2-457a-8e54-cfcc12a32a01",
        "x-ms-client-request-id": "1760990292347f0663139f713e234d81",
        "x-ms-correlation-request-id": "59ab5116-3548-48b7-880f-29dbded6a955",
        "x-ms-ratelimit-remaining-subscription-deletes": "14973",
        "x-ms-request-id": "10cec9d1-8b48-4fbf-8805-0b8da122dabb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155137Z:59ab5116-3548-48b7-880f-29dbded6a955"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/10cec9d1-8b48-4fbf-8805-0b8da122dabb?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c68f6eeb84e88246767302502dba399c-692b02a0b2209945-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5f48ddb27b48744a00ccacaddd66e67a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:37 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d9874cb7-16d6-4ade-a762-515bd6e4a31b",
        "x-ms-client-request-id": "5f48ddb27b48744a00ccacaddd66e67a",
        "x-ms-correlation-request-id": "077ba552-1b0b-4ec8-99b5-31970461dd0b",
        "x-ms-ratelimit-remaining-subscription-reads": "11753",
        "x-ms-request-id": "56b90eb4-0f02-4a24-8040-a174b187f92b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155137Z:077ba552-1b0b-4ec8-99b5-31970461dd0b"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6070/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-9f1a216d373232f057a6b7acc04dbe2c-747391c5b6e83664-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8c682525985ae1a0876a95dc29c79d2f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:37 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a4e67f50-38a1-468f-9f4f-d81160ce894e",
        "x-ms-client-request-id": "8c682525985ae1a0876a95dc29c79d2f",
        "x-ms-correlation-request-id": "a0d89de1-4e67-41ea-989c-3747da150474",
        "x-ms-ratelimit-remaining-subscription-reads": "11752",
        "x-ms-request-id": "16e2094d-4c48-475a-bf6f-0d65b5b15a99",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155137Z:a0d89de1-4e67-41ea-989c-3747da150474"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "853673386",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
