net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/EmptyRouteTableTest[2021-04-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-4f10ce8c495f948eff533fea294ef05f-64f038fe3412f758-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c4ee92426454b1029ea4008a0d8b9f1d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:51 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "d476e833-a801-4cf3-8a2c-064f152cff7c",
        "x-ms-ratelimit-remaining-subscription-reads": "11703",
        "x-ms-request-id": "d476e833-a801-4cf3-8a2c-064f152cff7c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155251Z:d476e833-a801-4cf3-8a2c-064f152cff7c"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg6120?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-79c955ae8faf3a134cfe1bc99b7385fe-7e1bf213f3c3c34e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e2e9141e5305ba90e3aaa5961dd0a257",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "bcdfd7bb-4fa2-4d84-8273-0e526944e7ec",
        "x-ms-ratelimit-remaining-subscription-writes": "1124",
        "x-ms-request-id": "bcdfd7bb-4fa2-4d84-8273-0e526944e7ec",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155252Z:bcdfd7bb-4fa2-4d84-8273-0e526944e7ec"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120",
        "name": "csmrg6120",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-d38c13e900d0bfd04c5863006eb37692-e35b5647d3f417f7-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8ccc2748da611dc1bcc17fd8029f2549",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/492e1cbc-e826-4f6d-89e8-e892d2b5de72?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "480",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2b7bcaa0-6200-47a3-9565-70e463e17e9d",
        "x-ms-client-request-id": "8ccc2748da611dc1bcc17fd8029f2549",
        "x-ms-correlation-request-id": "95a88ae5-dfc7-4b04-8f9c-96954136cc2d",
        "x-ms-ratelimit-remaining-subscription-writes": "1123",
        "x-ms-request-id": "492e1cbc-e826-4f6d-89e8-e892d2b5de72",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155254Z:95a88ae5-dfc7-4b04-8f9c-96954136cc2d"
      },
      "ResponseBody": {
        "name": "azsmnet2277",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277",
        "etag": "W/\"c423eab6-cf0e-4991-bc01-e1528f8d7827\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "493f7bef-3f9d-4384-a71f-186bfcf28374",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/492e1cbc-e826-4f6d-89e8-e892d2b5de72?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d38c13e900d0bfd04c5863006eb37692-031d2ba0049e34cc-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "77433f330e5139bc28c4499211e1e00a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "39bab39e-dbd5-4bec-afaa-a6d2168b1946",
        "x-ms-client-request-id": "77433f330e5139bc28c4499211e1e00a",
        "x-ms-correlation-request-id": "9893376a-c36b-43dc-9fc8-b0506915c961",
        "x-ms-ratelimit-remaining-subscription-reads": "11702",
        "x-ms-request-id": "9c130af8-441c-47e1-811d-62998e74f940",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155255Z:9893376a-c36b-43dc-9fc8-b0506915c961"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d38c13e900d0bfd04c5863006eb37692-b7439ea126f3bd04-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "fde04d80cc280a36e96e82f11f64033b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "481",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:55 GMT",
        "ETag": "W/\"c9e14e1d-6e41-4de3-b6d7-9db3bef8b4aa\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f3cbef28-853a-4241-8708-c68df6b33d7c",
        "x-ms-client-request-id": "fde04d80cc280a36e96e82f11f64033b",
        "x-ms-correlation-request-id": "7cf3d247-6818-412a-893d-39b52e8e6278",
        "x-ms-ratelimit-remaining-subscription-reads": "11701",
        "x-ms-request-id": "cd77c105-7d15-4018-947f-7d453d7c72b2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155255Z:7cf3d247-6818-412a-893d-39b52e8e6278"
      },
      "ResponseBody": {
        "name": "azsmnet2277",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277",
        "etag": "W/\"c9e14e1d-6e41-4de3-b6d7-9db3bef8b4aa\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "493f7bef-3f9d-4384-a71f-186bfcf28374",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-26f9a601b6b5c53c18d8a69ad1116f8a-8a868b69eed851cc-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c2a522edad5c2ef7154062d2f4ac4c28",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "481",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:55 GMT",
        "ETag": "W/\"c9e14e1d-6e41-4de3-b6d7-9db3bef8b4aa\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ba56566d-7902-4147-a0ba-dcc543d170de",
        "x-ms-client-request-id": "c2a522edad5c2ef7154062d2f4ac4c28",
        "x-ms-correlation-request-id": "ba9cc776-6992-49d9-8011-39559dac0fcf",
        "x-ms-ratelimit-remaining-subscription-reads": "11700",
        "x-ms-request-id": "3c259ba4-6aba-4e7d-9752-7ad41e57a969",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155256Z:ba9cc776-6992-49d9-8011-39559dac0fcf"
      },
      "ResponseBody": {
        "name": "azsmnet2277",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277",
        "etag": "W/\"c9e14e1d-6e41-4de3-b6d7-9db3bef8b4aa\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "493f7bef-3f9d-4384-a71f-186bfcf28374",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "cddcb08fd5a0663509388ee38ccb19c4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "558",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e4ddd85c-9198-4c07-860e-645275a68cb3",
        "x-ms-client-request-id": "cddcb08fd5a0663509388ee38ccb19c4",
        "x-ms-correlation-request-id": "6fea6e99-772e-4be8-a760-4479b8ccdc66",
        "x-ms-ratelimit-remaining-subscription-reads": "11699",
        "x-ms-request-id": "33737678-d061-4930-911b-07bf1bacb9db",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155256Z:6fea6e99-772e-4be8-a760-4479b8ccdc66"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet2277",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277",
            "etag": "W/\"c9e14e1d-6e41-4de3-b6d7-9db3bef8b4aa\"",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "493f7bef-3f9d-4384-a71f-186bfcf28374",
              "disableBgpRoutePropagation": false,
              "routes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables/azsmnet2277?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a056b2fe402f1ea80197d46318e763b3-727ad32533cb470a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "eea40dc11e3cd3ad55b1e8e76a63163d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9b6f90f9-3656-4f77-91ea-89bef1ded94f?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:52:57 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/9b6f90f9-3656-4f77-91ea-89bef1ded94f?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "74497e1c-e575-43cf-aca0-4bb6c22f110f",
        "x-ms-client-request-id": "eea40dc11e3cd3ad55b1e8e76a63163d",
        "x-ms-correlation-request-id": "4912b95c-03d4-494d-9d21-f603bf26bc09",
        "x-ms-ratelimit-remaining-subscription-deletes": "14969",
        "x-ms-request-id": "9b6f90f9-3656-4f77-91ea-89bef1ded94f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155257Z:4912b95c-03d4-494d-9d21-f603bf26bc09"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9b6f90f9-3656-4f77-91ea-89bef1ded94f?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a056b2fe402f1ea80197d46318e763b3-75787832280eceee-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e6119e265e0771ec020878efed4dfba5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:57 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0fa8a368-d700-4679-a8ab-7e3329365341",
        "x-ms-client-request-id": "e6119e265e0771ec020878efed4dfba5",
        "x-ms-correlation-request-id": "55978045-1bc2-4078-b172-da2a66d8c224",
        "x-ms-ratelimit-remaining-subscription-reads": "11698",
        "x-ms-request-id": "37839d33-4cc4-4e2e-a3dd-f34d5930b3ed",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155257Z:55978045-1bc2-4078-b172-da2a66d8c224"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6120/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "32c15022aa6a8b3c728d01fc6489b340",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:57 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1410cf9d-5829-497a-8656-bf95761dbe66",
        "x-ms-client-request-id": "32c15022aa6a8b3c728d01fc6489b340",
        "x-ms-correlation-request-id": "1551fdbb-77df-4b53-a19d-a80b313d0926",
        "x-ms-ratelimit-remaining-subscription-reads": "11697",
        "x-ms-request-id": "c4cd9b4e-6953-4bfc-a2ab-efaa4f4bad56",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155257Z:1551fdbb-77df-4b53-a19d-a80b313d0926"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1511024017",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
